NetBSD Problem Report #47950

From kiers@n5501.boppelans.net  Fri Jun 21 13:28:24 2013
Return-Path: <kiers@n5501.boppelans.net>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1 with cipher DHE-RSA-AES256-SHA (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id B74BE70A07
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 21 Jun 2013 13:28:24 +0000 (UTC)
Message-Id: <20130621132821.3B0605B30D@n5501.boppelans.net>
Date: Fri, 21 Jun 2013 15:28:20 +0200 (CEST)
From: kiers@xs4all.nl
Reply-To: kiers@xs4all.nl
To: gnats-bugs@gnats.NetBSD.org
Subject:
X-Send-Pr-Version: 3.95

>Number:         47950
>Category:       port-i386
>Synopsis:       kernel panic at boot time with hifn(4) card inserted
>Confidential:   no
>Severity:       serious
>Priority:       low
>Responsible:    msaitoh
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Jun 21 13:30:00 +0000 2013
>Closed-Date:    Tue Jun 03 13:58:42 +0000 2014
>Last-Modified:  Tue Jun 03 13:58:42 +0000 2014
>Originator:     kiers@xs4all.nl
>Release:        NetBSD 6.99.22
>Organization:

>Environment:


	Soekris 5501 with Hifn 7951
System: NetBSD n5501.boppelans.net 6.99.22 NetBSD 6.99.22 (N5501-sansHifn) #0: Fri Jun 21 14:55:09 CEST 2013 kiers@yvresse:/tmp/co/sys/arch/i386/compile/N5501-sansHifn i386
Architecture: i386
Machine: i386
>Description:

	With the mini PCI card not inserted, everything fine.
	With the card, kernel panic at boot time:
uhub1 at usb1: vendor 0x1022 EHCI root hub, class 9/0, rev 2.00/1.00, addr 1
fatal page fault in supervisor mode
trap type 6 code 0 eip 5e5881a6 cs 8 eflags 10296 cr2 5e5881a6 ilevel 8 esp b1daa460
curlwp 0xc17872a0 pid 0 lid 6 lowest kstack 0xd7e3e000
kernel: supervisor trap page fault, code=0
Stopped in pid 0.6 (system) at  5e5881a6:       invalid address
db{0}> trace
fatal page fault in supervisor mode
trap type 6 code 0 eip c029ed46 cs 8 eflags 10246 cr2 5e5881a6 ilevel 8 esp d7e40570
curlwp 0xc17872a0 pid 0 lid 6 lowest kstack 0xd7e3e000
kernel: supervisor trap page fault, code=0
Faulted in DDB; continuing...
db{0}>

Complete dmesg http://netbsd.itsx.net/n5501-panic-2.txt

This did not happen with NetBSD 5.1.2. I'll try 6 next.

>How-To-Repeat:
	Try to boot current on box with this Hifn card.
>Fix:


>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: gnats-admin->port-i386-maintainer
Responsible-Changed-By: spz@NetBSD.org
Responsible-Changed-When: Sun, 23 Jun 2013 09:06:49 +0000
Responsible-Changed-Why:
fix up PR with damaged form
.


From: Bert Kiers <kiers@original.xs4all.nl>
To: gnats-bugs@NetBSD.org
Cc: port-i386-maintainer@NetBSD.org, gnats-admin@NetBSD.org,
	netbsd-bugs@NetBSD.org, spz@NetBSD.org, kiers@xs4all.nl
Subject: Re: port-i386/47950 (kernel panic at boot time with hifn(4) card inserted)
Date: Sun, 23 Jun 2013 19:34:54 +0200

 On Sun, Jun 23, 2013 at 09:06:49AM +0000, spz@NetBSD.org wrote:
 > Synopsis: kernel panic at boot time with hifn(4) card inserted

 Data point: no problem with 6.0.1, that calls itself:

 NetBSD n5501.boppelans.net 6.0_STABLE NetBSD 6.0_STABLE (GENERIC) #0: Fri Jun 21 16:06:34 CEST 2013  kiers@yvresse:/tmp/O15507/sys/arch/i386/compile/GENERIC i386

 (weird, after 20 years I still don't understand NetBSD version naming)


 -- 
 B*E*R*T

From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47950 CVS commit: src/sys/dev/pci
Date: Tue, 3 Jun 2014 13:53:28 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Tue Jun  3 13:53:28 UTC 2014

 Modified Files:
 	src/sys/dev/pci: hifn7751.c

 Log Message:
  Avoid buffer overflow which was added in rev. 1.52.
 This change fix a panic at boot time (PR#47950 Reported by Bert Kiers).

  OK'd by tls.


 To generate a diff of this commit:
 cvs rdiff -u -r1.54 -r1.55 src/sys/dev/pci/hifn7751.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: port-i386-maintainer->msaitoh
Responsible-Changed-By: msaitoh@NetBSD.org
Responsible-Changed-When: Tue, 03 Jun 2014 13:58:42 +0000
Responsible-Changed-Why:
mine.


State-Changed-From-To: open->closed
State-Changed-By: msaitoh@NetBSD.org
State-Changed-When: Tue, 03 Jun 2014 13:58:42 +0000
State-Changed-Why:
Fixed in sys/dev/pci/hifn7751.c rev. 1.52.
Thanks.


>Unformatted:

 	no
 	kernel panic at boot time with hifn(4) card inserted
 	serious
 	low
 	kern
 	sw-bug


 	current from today

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.