 Avoid buffer overflow which was added in rev. 1.52. This change fix a panic at boot time (PR#47950 Reported by Bert Kiers).

OK'd by tls.